@@ -9,6 +9,7 @@ module Druid
       #
       def [](idx)
         idx = find_index_by_title(idx) if idx.kind_of?(String)
+        return nil unless idx
         Druid::Elements::TableCell.new(element[idx])
       end
       #
