@@ -10,6 +10,8 @@
   * Added the ability to find a TableCell by providing a String to the [] method from TableRow
 * Fixes
   * Modified text area methods so it clears before setting new text
+  * Updated [] method on Table to return nil when bad row header is provided
+  * Updated [] method on TableRow to return nil when bad column header is provided
 === 2016-12-26
 * Enhancement
   * Changed page_url to accept a symbol that will cause it to call a corresponding method
